End of section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "du9aw0y7j",
+    "ApiKey": "216691254466762",
+    "ApiSecret": "fzvd3OvTyBvyuk48zXt-LdVPHxs"
+  }
 }
